fixed 'Image Not Available' overflowing the container in desktop

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -705,7 +705,8 @@
 
 .episode-card-img {
   width: 100%;
-  object-fit: contain;
+  height: 281px;
+  object-fit: cover;
 }
 
 .img-background {
